2006-11-17  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/search.c:
   Change Find Next/Previous buttons to use better stock icons.
 * src/callbacks.c, src/sci_cb.c, src/document.c, src/document.h:
   Fix sign comparison warnings.


2006-11-16  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/main.c: Enabled DnD also for the main notebook widget to drop
               files in the main area of Geany.


2006-11-15  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/vte.c: Don't unload the VTE module on exit to avoid crashes on
              some systems.
 * src/main.c: Fixed small memory leak.
 * src/callbacks.c, src/callbacks.h, src/document.c, src/document.h,
   src/main.c, src/sci_cb.c:
   Enabled drag and drop for the whole main window to be able to drop
   files even if no tabs are open.
   Moved code for getting the file list to document_open_file_list().


2006-11-15  Frank Lanitz  <frank@frank.uvena.de>

 * src/about.c, configure.in, THANKS, po/zh_TW.po:
   Added tranditional Chinese translation (Thanks to KoViCH
   <kovich.ian@gmail.com>).


2006-11-15  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/ui_utils.h, src/search.c, src/ui_utils.c:
   Add search history for Find in Files.
   Add ui_combo_box_add_to_history() and use to prevent blocks of
   duplicates (but not all duplicates) from search history combo boxes,
   and limit history to 30 entries.
 * src/build.c:
   Remove the stop button in build_exit_cb() when using Make commands.
   Fix set_stop_button() when using Make when the current file has no
   filetype.


2006-11-14  Enrico Tröger  <enrico.troeger@uvena.de>

 * scintilla/LexPascal.c: Tried to fix wrong styling at "end.".


2006-11-14  Frank Lanitz  <frank@frank.uvena.de>

 * po/zh_CN.po, src/about.c, configure.in, THANKS:
   Added simple Chinese (zh_CN) translation (Thanks to
   Dormouse Young <mouselinux@163.com>).


2006-11-14  Nick Treleaven  <nick.treleaven@btinternet.com>
